@@ -18,6 +18,23 @@
  */
 package org.apache.xml.security.test.dom.encryption;
 
+import java.io.ByteArrayInputStream;
+import java.io.InputStream;
+import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.PrivateKey;
+import java.security.PublicKey;
+import java.util.UUID;
+
+import javax.crypto.KeyGenerator;
+import javax.crypto.SecretKey;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.xpath.XPath;
+import javax.xml.xpath.XPathConstants;
+import javax.xml.xpath.XPathFactory;
+
 import org.apache.xml.security.encryption.DocumentSerializer;
 import org.apache.xml.security.encryption.TransformSerializer;
 import org.apache.xml.security.encryption.XMLCipher;
@@ -31,27 +48,11 @@ import org.junit.jupiter.api.Test;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 
-import javax.crypto.KeyGenerator;
-import javax.crypto.SecretKey;
-import javax.xml.transform.TransformerFactory;
-import javax.xml.xpath.XPath;
-import javax.xml.xpath.XPathConstants;
-import javax.xml.xpath.XPathFactory;
-import java.io.ByteArrayInputStream;
-import java.io.InputStream;
-import java.lang.reflect.Field;
-import java.nio.charset.StandardCharsets;
-import java.security.KeyPair;
-import java.security.KeyPairGenerator;
-import java.security.PrivateKey;
-import java.security.PublicKey;
-import java.util.UUID;
-
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  */
-public class SignedEncryptedTest {
+class SignedEncryptedTest {
 
     private static final String SAMPLE_MSG = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>"
             + "<SOAP-ENV:Envelope "
@@ -77,11 +78,11 @@ public class SignedEncryptedTest {
      * @throws Exception
      */
     @Test
-    public void decryptUsingXalanTransformer() throws Exception {
+    void decryptUsingXalanTransformer() throws Exception {
         try {
             Class<?> tf = getClass().getClassLoader().loadClass(
                     "org.apache.xalan.processor.TransformerFactoryImpl");
-            secureAndVerify((TransformerFactory) tf.newInstance(), false);
+            secureAndVerify((TransformerFactory) tf.getDeclaredConstructor().newInstance(), false);
         } catch (ClassNotFoundException e) {
             System.out.println(
                     "org.apache.xalan.processor.TransformerFactoryImpl not found, skipping test");
@@ -95,7 +96,7 @@ public class SignedEncryptedTest {
      * @throws Exception
      */
     @Test
-    public void decryptUsingSunDOMSerializer() throws Exception {
+    void decryptUsingSunDOMSerializer() throws Exception {
         secureAndVerify(null, true);
     }
 
@@ -143,13 +144,13 @@ public class SignedEncryptedTest {
 
         document = cipher.doFinal(document, element, true);
 
-        XMLCipher deCipher = null;
+        XMLCipher deCipher;
         if (useDocumentSerializer) {
             deCipher = XMLCipher.getInstance(new DocumentSerializer(true), XMLCipher.AES_128);
         } else {
             TransformSerializer serializer = new TransformSerializer(true);
             Field f = serializer.getClass().getDeclaredField("transformerFactory");
-            f.setAccessible(true);
+            f.setAccessible(true); // NOPMD
             f.set(serializer, transformerFactory);
             deCipher = XMLCipher.getInstance(serializer, XMLCipher.AES_128);
         }
